# 80x86

./: .clang-format  .exrc  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  COPYING  README  README.md  config.h.in  config.v.in  instructions.yaml
bios/: CMakeLists.txt  bda.h  bios.c  bios.h  bios.x  disk.c  display.c  display.h  entry.S  io.h  keyboard.c  keyboard.h  leds.c  leds.h  macros.h  mouse.c  mouse.h  mouse_asm.S  printk.c  scancodes.h  sd.c  sd.h  serial.c  serial.h  timer.c  timer.h  utils.c  utils.h
documentation/: CMakeLists.txt  development-guide.asciidoc  instructions.templ  instructions.yaml  theme.yml
fpga/de0-cv/: CMakeLists.txt  SysPLL.v  Top.qsf  Top.sdc  Top.srf  Top.sv  defines.sv
fpga/de0-cv/bios/: CMakeLists.txt  bios.asm  bios.c  bios.h  bios.x  debug.asm  disk.asm  disk.c  entry.S  io.asm  io.h  keyboard.asm  sd.c  sdcard.asm  serial.c  video.asm
fpga/de0-nano/: CMakeLists.txt  LEDSRegister.sv  SysPLL.v  Top.qsf  Top.sdc  Top.srf  Top.sv  defines.sv
fpga/hdp001/: CMakeLists.txt  SysPLL.v  Top.qsf  Top.sdc  Top.srf  defines.sv
python/py8086sim/: CMakeLists.txt  Cpu.cpp
rtl/: ALU.v  CMakeLists.txt  CSIPSync.sv  CSIPSync.v  Core.sv  Core.v  Divider.sv  Divider.v  Fifo.sv  Fifo.v  Flags.sv  Flags.v  FlagsEnum.sv  FlagsEnum.v  IP.sv  IP.v  ImmediateReader.sv  ImmediateReader.v  InsnDecoder.sv  Instruction.sv  InstructionDefinitions.sv.templ  JumpTest.sv  JumpTest.v  LoadStore.sv  LoadStore.v  LoopCounter.sv  MemArbiter.sv  ModRMDecode.sv  ModRMDecode.v  PosedgeToPulse.sv  Prefetch.sv  Prefetch.v  RegisterEnum.sv  RegisterEnum.v  RegisterFile.sv  RegisterFile.v  SegmentOverride.sv  SegmentOverride.v  SegmentRegisterFile.sv  SegmentRegisterFile.v  (+1 more)
rtl/alu/: ALU.sv  ALU.v  aaa.sv  aaa.v  aas.sv  adc.sv  adc.v  add.sv  add.v  and.sv  and.v  bound.sv  daa.sv  daa.v  das.sv  das.v  enter.sv  extend.sv  extend.v  flags.sv  mul.sv  mul.v  not.sv  or.sv  rcl.sv  rcl.v  rcr.sv  rcr.v  rol.sv  rol.v  ror.sv  ror.v  sar.sv  sar.v  shift_flags.sv  shift_flags.v  shl.sv  shl.v  shr.sv  shr.v  (+3 more)
rtl/cdc/: BitSync.sv  BitSync.v  MCP.sv  SyncPulse.sv
rtl/microcode/: CMakeLists.txt  Microcode.sv.templ  Microcode.v.templ  MicrocodeTypes.h.templ  MicrocodeTypes.sv.templ  MicrocodeTypes.v.templ  aaa.us  aad.us  aas.us  adc.us  add.us  and.us  arithmetic.us  bound.us  call.us  cmp.us  cmps.us  comparison.us  daa.us  das.us  debug.us  div.us  enter.us  esc.us  extend.us  flags.us  hlt.us  inc.us  int.us  io.us  jmp.us  lds.us  lea.us  leave.us  les.us  lods.us  loop.us  microcode.mif.templ  microcode.us  mov.us  (+26 more)
sim/: CGA.h  CMakeLists.txt  CPU.h  Emulate.cpp  Emulate.h  Fifo.h  Keyboard.h  Memory.cpp  Memory.h  ModRM.cpp  ModRM.h  Mouse.h  PIC.h  PS2.h  RegisterFile.cpp  RegisterFile.h  SPI.cpp  SPI.h  Simulator.cpp  Simulator.h  Timer.h  UART.cpp  UART.h  bios.asm
sim/RTLCPU/: CMakeLists.txt  Core.cpp  RTLCPU.h  RTLCPU.sv
sim/common/: CMakeLists.txt  CPU.h  Memory.cpp  Memory.h  RegisterFile.cpp  RegisterFile.h
sim/cppmodel/: CMakeLists.txt  Emulate.cpp  Emulate.h  ModRM.cpp  ModRM.h  SoftwareCPU.h
sim/cppmodel/instructions/: aaa.cpp  aad.cpp  aam.cpp  aas.cpp  adc.cpp  add.cpp  and.cpp  bound.cpp  call.cpp  cbw.cpp  clc.cpp  cld.cpp  cli.cpp  cmc.cpp  cmp.cpp  cmps.cpp  cwd.cpp  daa.cpp  das.cpp  div.cpp  (+46 more)
sim/cpu/: CMakeLists.txt  CPU.h  Emulate.h  Memory.cpp  Memory.h  ModRM.h
sim/display/: CMakeLists.txt  Cursor.h  Display.cpp  Display.h  Font.h  Window.h
sim/instructions/: aaa.cpp  aad.cpp  aam.cpp  aas.cpp  adc.cpp  add.cpp  and.cpp  call.cpp  clc.cpp  cld.cpp  cli.cpp  cmc.cpp  cmp.cpp  cmps.cpp  cwd.cpp  daa.cpp  das.cpp  esc.cpp  hlt.cpp  imul.cpp  inc_dec.cpp  int.cpp  io.cpp  jmp.cpp  lahf_sahf.cpp  lea.cpp  lods.cpp  loop.cpp  loope.cpp  loopnz.cpp  mov.cpp  movs.cpp  mul.cpp  neg.cpp  not.cpp  or.cpp  pop.cpp  rcl.cpp  rcr.cpp  ret.cpp  (+17 more)
tests/: Arithmetic.cpp  Arithmetic.h  CMakeLists.txt  EmulateFixture.h  Flags.h  MockRegisterFile.h  Shift.cpp  Shift.h  SimMain.cpp  TestAdc.cpp  TestAdd.cpp  TestAnd.cpp  TestAscii.cpp  TestCall.cpp  TestControl.cpp  TestEmulate.cpp  TestExtend.cpp  TestFlags.cpp  TestIncDec.cpp  TestInt.cpp  TestJump.cpp  TestLock.cpp  TestLoop.cpp  TestMemory.cpp  TestMisc.cpp  TestModRM.cpp  TestMov.cpp  TestMul.cpp  TestNot.cpp  TestOr.cpp  TestPointer.cpp  TestPush.cpp  TestRcl.cpp  TestRcr.cpp  TestRegisterFile.cpp  TestRet.cpp  TestRol.cpp  TestRor.cpp  TestSar.cpp  TestSbb.cpp  (+10 more)
tests/common/: TestModRM.cpp
tests/include/: EmulateFixture.h  Flags.h  TestModRM.h  TestUtils.h
tests/instructions/: Arithmetic.cpp  Arithmetic.h  CMakeLists.txt  Shift.cpp  Shift.h  TestAdc.cpp  TestAdd.cpp  TestAnd.cpp  TestAscii.cpp  TestBound.cpp  TestCall.cpp  TestCmp.cpp  TestControl.cpp  TestDiv.cpp  TestEnter.cpp  TestExtend.cpp  TestFlags.cpp  TestIO.cpp  TestIncDec.cpp  TestInt.cpp  TestInvalid.cpp  TestJump.cpp  TestLeave.cpp  TestLock.cpp  TestLoop.cpp  TestMisc.cpp  TestMov.cpp  TestMul.cpp  TestNeg.cpp  TestNot.cpp  TestOr.cpp  TestPointer.cpp  TestPush.cpp  TestRcl.cpp  TestRcr.cpp  TestRet.cpp  TestRol.cpp  TestRor.cpp  TestSar.cpp  TestSbb.cpp  (+11 more)
tests/integration/: CMakeLists.txt  calls_and_jumps.py  irq.py  modrm_override.py  moves.py  singlestep.py
tests/jtag/: CMakeLists.txt  JTAGCPU.cpp  JTAGCPU.h  main.cpp
tests/programs/: CMakeLists.txt  calls_and_jumps.asm  irq.asm  modrm_override.asm  moves.asm  singlestep.asm
tests/python/: Runner.py
tests/rtl/: CMakeLists.txt  Core.cpp  DecodeTestbench.sv  ModRMTestbench.sv  ModRMTestbench.v  RTLCPU.h  TestALU.cpp  TestCSIPSync.cpp  TestCache.cpp  TestDecode.cpp  TestDivider.cpp  TestDivisionAlgorithm.cpp  TestFifo.cpp  TestFlags.cpp  TestIP.cpp  TestImmediateReader.cpp  TestLoadStore.cpp  TestMicrocode.cpp  TestModRMDecode.cpp  TestPIC.cpp  TestPosedgeToPulse.cpp  TestPrefetch.cpp  TestRegisterFile.cpp  TestSegmentOverride.cpp  TestSegmentRegisterFile.cpp  VerilogDriver.h  VerilogTestbench.h  fifo.cpp  main.cpp  prefetch.cpp
tests/simulator/: CMakeLists.txt  SimMain.cpp  TestFifo.cpp  TestMemory.cpp  TestModRM.cpp  TestRegisterFile.cpp
(+97 files in other folders)
